[tool.poetry]
name = "sydney-py"
version = "0.21.0"
description = "Python Client for Copilot (formerly named Bing Chat), also known as Sydney."
authors = ["vsakkas <vasileios.sakkas96@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "sydney" }]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
websockets = "^12.0"
brotli = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
thefuzz = { extras = ["speedup"], version = "^0.22.1" }

[tool.poetry.group.ci.dependencies]
pytest-rerunfailures = "^14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
