[tool.poetry]
name = "sydney-py"
version = "0.21.0"
description = "Python Client for Copilot (formerly named Bing Chat), also known as Sydney."
authors = ["vsakkas <vasileios.sakkas96@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "sydney" }]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.10.5"
websockets = "^13.0.1"
brotli = "^1.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
thefuzz = { extras = ["speedup"], version = "^0.22.1" }
ruff = "^0.6.4"

[tool.poetry.group.ci.dependencies]
pytest-rerunfailures = "^14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
